# csp-report-listener

./: .dockerignore  .gitignore  LICENSE  README.md
.github/: deploy-docker.yaml
.github/workflows/: deploy-bin.yaml
csp-service/: Cargo.toml
csp-service/src/: auth.rs  main.rs  pages.rs  report.rs  state.rs  token.rs  utils.rs
csp-service/src/html/: index.html
deploy/: Dockerfile  Dockerfile_linux_bin
sqlite/: Cargo.toml
sqlite/src/: config.rs  lib.rs
