[package]
name = "deadpool-sqlite"
version = "0.1.0"
edition = "2021"

[features]
default = ["rt_tokio_1"]
rt_tokio_1 = ["deadpool/rt_tokio_1"]
rt_async-std_1 = ["deadpool/rt_async-std_1"]
serde = ["deadpool/serde", "serde_1"]

[dependencies]
deadpool = { version = "0.9.1", default-features = false, features = ["managed"] }
deadpool-sync = "0.1.0"
rusqlite = { version = "0.28", features = ["bundled"] }
serde_1 = { package = "serde", version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
config = { version = "0.13", features=["json"] }
dotenv = "0.15"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
